create Style.css and link with index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="stylesheet" href="Style.css">
     <title>FernySepul</title>
   </head>
   <body>
     <nav class="nav-bar">
       <ul>
-      <li class="language nav-item">English</li>
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="about.html">About</a></li>
-      <li class="nav-item"><a href="">Contact</a></li>
+      <li class="language nav-item"><a href="#">English</a></li>
+      <li class="nav-item index"><a href="index.html">Home</a></li>
+      <li class="nav-item about"><a href="about.html">About</a></li>
+      <li class="nav-item contact"><a href="">Contact</a></li>
     </nav>
     <article class="main" id="main">
       <section class="biography">
