--- a/about.html
+++ b/about.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Style.css">
     <title>FernySepul</title>
 </head>
 <body>
-    <nav class="nav-bar">
-        <ul>
-        <li class="language nav-item">English</li>
-        <li class="nav-item"><a href="index.html">Home</a></li>
-        <li class="nav-item"><a href="about.html">About</a></li>
-        <li class="nav-item"><a href="">Contact</a></li>
-      </nav>
-      <hr>
+    <header>
+        <nav class="nav-bar">
+          <a href="#">English</a>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
       <article class="main">
           <section class="tecnical-knowledge">
             <h2 class="tittle">tecnical knowledge and skills</h2>
