--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
     <title>FernySepul</title>
   </head>
   <body>
-    <nav class="nav-bar">
-      <ul>
-      <li class="language nav-item"><a href="#">English</a></li>
-      <li class="nav-item index"><a href="index.html">Home</a></li>
-      <li class="nav-item about"><a href="about.html">About</a></li>
-      <li class="nav-item contact"><a href="">Contact</a></li>
-    </nav>
+    <header>
+      <nav class="nav-bar">
+        <a href="#">English</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    
     <article class="main" id="main">
       <section class="biography">
         
