adding Style and info on index.html and about.html

--- a/about.html
+++ b/about.html
@@ -1,61 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Style.css">
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="Style.css" />
     <title>FernySepul</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <nav class="nav-bar">
-          <a href="#">English</a>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="">Contact</a></li>
-          </ul>
-        </nav>
-      </header>
-      <article class="main">
-          <section class="tecnical-knowledge">
-            <h2 class="tittle">tecnical knowledge and skills</h2>
-          <ul>
-            <li>
-                <p>Front-end Web Development (client-side)</p>
-                <ul>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                </ul>
-            </li>
-            <li>
-                <p>Back-end Web Development (server-side)</p>
-                <ul>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                    <li id="list-item">lorem</li>
-                </ul>
-            </li>
-          </ul>
-          </section>
-          <hr>
-          <section class="curios-things">
-            <h2 class="subtittle">Curios things about me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus, impedit iste corrupti, dignissimos sed reprehenderit voluptatibus illum architecto voluptates eius debitis deserunt ipsum illo non? Odit facere expedita enim provident saepe sapiente sed non tenetur exercitationem repudiandae nisi necessitatibus error asperiores libero rem repellendus, atque, ratione blanditiis tempore iste neque!</p>
-          </section>
-
-      </article>
-      <hr>
+      <nav class="nav-bar">
+        <a href="#">English</a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <article class="main">
+      <section class="tecnical-knowledge">
+        <h2 class="tittle">tecnical knowledge and skills</h2>
+        <ul>
+          <li>
+            <p>Front-end Web Development (client-side)</p>
+            <ul>
+              <li id="list-item">Html5</li>
+              <li id="list-item">MarkDown</li>
+              <li id="list-item">CSS3, Flexbox, Css Grid</li>
+              <li id="list-item">Responsive Web Design</li>
+              <li id="list-item">
+                Desing software:Figma, Corel draw, Adove photoshop express
+              </li>
+              <li id="list-item">
+                Version control: Git/Github, Team Fundation
+              </li>
+            </ul>
+          </li>
+          <li>
+            <p>Back-end Web Development (server-side)</p>
+            <ul>
+              <li id="list-item">Java</li>
+              <li id="list-item">C#</li>
+              <li id="list-item">Javascript</li>
+              <li id="list-item">Data base SQL Server</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section class="curios-things">
+        <h2 class="subtittle">Curios things about me</h2>
+        <p>
+          I really enjoy when I have a great challenge ahead of me, I like
+          everything related to the computer world and I also like play video
+          games like Fortnite in my free time.
+        </p>
+      </section>
+    </article>
     <footer class="footer">
-        <p class="footer-text">© 2023 Fernando F. S. All rights reserved.</p>
-      </footer>
-</body>
+      <p class="footer-text">© 2023 Fernando F. S. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
