adding contact.html and modified Style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="Style.css" />
+    <link rel="shorcut icon" href="img/icon.png" />
     <title>FernySepul</title>
   </head>
   <body>
@@ -17,7 +18,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -28,7 +29,6 @@
           <h1 class="tittle">Juan Fernando Flores Sepulveda</h1>
 
           <p>It staff from servicio alameda sa de cv</p>
-
           <p>
             Im currenly work in a help desk system from Los Álamos Cafe with
             Flexbox CSS and Javascript.
@@ -37,23 +37,39 @@
             wonderful world of web development.😄
           </p>
         </div>
-        <img src="img/Foto-Perfil.png" alt="Foto de perfil" />
+        <img src="img/Foto-Perfil.jpg" alt="Foto de perfil" />
       </section>
 
       <section class="projects">
-        <h2 class="subtittle">projects</h2>
+        <h2 class="subtittle">Projects</h2>
 
-        <div class="box-project">
-          <img
-            src="img/Sistema-Tickets.png"
-            alt="proyecto sistema de tickets"
-            width="432px"
-          />
-          <p>
-            <b><i>Sistema tickets</i></b> it's a help desk system for the IT
-            staff area for Los Álamos Cafe y Servicio Alameda SA de CV this
-            program helps them with the management of queries by company staff.
-          </p>
+        <div class="container-projects">
+          <div class="box-project">
+            <img
+              src="img/Sistema-Tickets.png"
+              alt="proyecto sistema de tickets"
+              width="432px"
+            />
+            <p>
+              <b><i>Sistema tickets</i></b> it's a help desk system for the IT
+              staff area for Los Álamos Cafe y Servicio Alameda SA de CV this
+              program helps them with the management of queries by company
+              staff.
+            </p>
+          </div>
+          <div class="box-project">
+            <img
+              src="img/Sistema-Tickets.png"
+              alt="proyecto sistema de tickets"
+              width="432px"
+            />
+            <p>
+              <b><i>Sistema tickets</i></b> it's a help desk system for the IT
+              staff area for Los Álamos Cafe y Servicio Alameda SA de CV this
+              program helps them with the management of queries by company
+              staff.
+            </p>
+          </div>
         </div>
       </section>
     </article>
