--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
     />
+    <link rel="shorcut icon" href="img/icon.png" />
     <link rel="stylesheet" href="Style.css" />
     <title>FernySepul</title>
   </head>
@@ -17,7 +18,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
