Adding contend to contact.html

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="Stylecards.css" />
     <link rel="shorcut icon" href="img/icon.png" />
     <title>FernySepul</title>
   </head>
@@ -20,12 +27,59 @@
     <article class="main">
       <section class="contact">
         <h1 class="tittle">Contact me :)</h1>
-        <div class="container-card">
-          <div class="card">
-            <img src="" alt="" class="icon" />
-            <p class="name">algo</p>
-          </div>
-        </div>
+        <ul class="cards">
+          <li>
+            <a href="https://www.instagram.com/fernysepul28/" target="_blank">
+              <div class="container-card instagram">
+                <img src="img/instagram.svg.svg" alt="Icono Instagram" />
+                <p>Instagram</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/FernySepul" target="_blank">
+              <div class="container-card github">
+                <img src="img/github.svg.svg" alt="Icono github" />
+                <p>GitHub</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a
+              href="https://api.whatsapp.com/send/?phone=526421642166"
+              target="_blank"
+            >
+              <div class="container-card whatsapp">
+                <img src="img/whatsapp.svg" alt="Icono whatsapp" />
+                <p>Whatsapp</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="discordapp.com/users/408441507188703242" target="_blank">
+              <div class="container-card discord">
+                <img src="img/Discord.svg" alt="Icono discord" />
+                <p>Discord</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="mailto:fernando1210flores@gmail.com" target="_blank">
+              <div class="container-card email">
+                <img src="img/email.svg" alt="Icono email" />
+                <p>Email</p>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#" target="_blank">
+              <div class="container-card linkedin">
+                <img src="img/linkedin.svg" alt="Icono linkedin" />
+                <p>Linkedin</p>
+              </div>
+            </a>
+          </li>
+        </ul>
       </section>
     </article>
 
