making darkmode and some animations

--- a/about.html
+++ b/about.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
     <link rel="shorcut icon" href="img/icon.png" />
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="Styles/Style.css" />
+    <link rel="stylesheet" href="Styles/Style-navbar.css" />
     <title>FernySepul</title>
   </head>
   <body>
+    <!-- nav-bar -->
     <header>
       <nav class="nav-bar">
         <a href="#">English</a>
@@ -22,6 +18,7 @@
         </ul>
       </nav>
     </header>
+    <!-- contenido -->
     <article class="main">
       <section class="tecnical-knowledge">
         <h2 class="tittle">tecnical knowledge and skills</h2>
@@ -61,6 +58,7 @@
         </p>
       </section>
     </article>
+    <!-- Footer -->
     <footer class="footer">
       <p class="footer-text">© 2023 Fernando F. S. All rights reserved.</p>
     </footer>
