--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="Style.css" />
-    <link rel="stylesheet" href="Stylecards.css" />
     <link rel="shorcut icon" href="img/icon.png" />
+    <link rel="stylesheet" href="Styles/Style.css" />
+    <link rel="stylesheet" href="Styles/Style-navbar.css" />
+    <link rel="stylesheet" href="Styles/Stylecards.css" />
     <title>FernySepul</title>
   </head>
   <body>
+    <!-- nav-bar -->
     <header>
       <nav class="nav-bar">
         <a href="#">English</a>
@@ -23,15 +19,20 @@
         </ul>
       </nav>
     </header>
-
+    <!-- contenido -->
     <article class="main">
       <section class="contact">
         <h1 class="tittle">Contact me :)</h1>
+        <!-- Tarjetas de contactame -->
         <ul class="cards">
           <li>
             <a href="https://www.instagram.com/fernysepul28/" target="_blank">
               <div class="container-card instagram">
-                <img src="img/instagram.svg.svg" alt="Icono Instagram" />
+                <img
+                  class="icon"
+                  src="img/instagram.svg.svg"
+                  alt="Icono Instagram"
+                />
                 <p>Instagram</p>
               </div>
             </a>
@@ -39,7 +40,7 @@
           <li>
             <a href="https://github.com/FernySepul" target="_blank">
               <div class="container-card github">
-                <img src="img/github.svg.svg" alt="Icono github" />
+                <img class="icon" src="img/github.svg.svg" alt="Icono github" />
                 <p>GitHub</p>
               </div>
             </a>
@@ -50,15 +51,18 @@
               target="_blank"
             >
               <div class="container-card whatsapp">
-                <img src="img/whatsapp.svg" alt="Icono whatsapp" />
+                <img class="icon" src="img/whatsapp.svg" alt="Icono whatsapp" />
                 <p>Whatsapp</p>
               </div>
             </a>
           </li>
           <li>
-            <a href="discordapp.com/users/408441507188703242" target="_blank">
+            <a
+              href="https://discordapp.com/users/408441507188703242"
+              target="_blank"
+            >
               <div class="container-card discord">
-                <img src="img/Discord.svg" alt="Icono discord" />
+                <img class="icon" src="img/Discord.svg" alt="Icono discord" />
                 <p>Discord</p>
               </div>
             </a>
@@ -66,15 +70,15 @@
           <li>
             <a href="mailto:fernando1210flores@gmail.com" target="_blank">
               <div class="container-card email">
-                <img src="img/email.svg" alt="Icono email" />
+                <img class="icon" src="img/email.svg" alt="Icono email" />
                 <p>Email</p>
               </div>
             </a>
           </li>
           <li>
-            <a href="#" target="_blank">
+            <a href="#">
               <div class="container-card linkedin">
-                <img src="img/linkedin.svg" alt="Icono linkedin" />
+                <img class="icon" src="img/linkedin.svg" alt="Icono linkedin" />
                 <p>Linkedin</p>
               </div>
             </a>
@@ -82,7 +86,7 @@
         </ul>
       </section>
     </article>
-
+    <!-- Footer -->
     <footer class="footer">
       <p class="footer-text">© 2023 Fernando F. S. All rights reserved.</p>
     </footer>
