--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="Style.css" />
+    <link rel="stylesheet" href="Styles/Style.css" />
+    <link rel="stylesheet" href="Styles/Style-navbar.css" />
     <link rel="shorcut icon" href="img/icon.png" />
     <title>FernySepul</title>
   </head>
   <body>
+    <!-- nav-bar -->
     <header>
       <nav class="nav-bar">
         <a href="#">English</a>
@@ -22,12 +18,11 @@
         </ul>
       </nav>
     </header>
-
+    <!-- contenido -->
     <article class="main" id="main">
       <section class="biography">
         <div class="container">
           <h1 class="tittle">Juan Fernando Flores Sepulveda</h1>
-
           <p>It staff from servicio alameda sa de cv</p>
           <p>
             Im currenly work in a help desk system from Los Álamos Cafe with
@@ -39,7 +34,7 @@
         </div>
         <img src="img/Foto-Perfil.jpg" alt="Foto de perfil" />
       </section>
-
+      <!-- proyectos -->
       <section class="projects">
         <h2 class="subtittle">Projects</h2>
 
@@ -73,6 +68,7 @@
         </div>
       </section>
     </article>
+    <!-- Footer -->
     <footer class="footer">
       <p class="footer-text">© 2023 Fernando F. S. All rights reserved.</p>
     </footer>
